# s2gos-example-app

./: .gitmodules  .pre-commit-config.yaml  CHANGES.md  README.md  mkdocs.yml  pyproject.toml
docs/: about.md  index.md
ext/s2gos-generator/: pyproject.toml
ext/s2gos-generator/src/s2gos_generator/: core.py  main.py
ext/s2gos-scene-description/: pyproject.toml
ext/s2gos-scene-description/src/s2gos_scene_description/: json_exporter.py  scene.py
ext/s2gos-simulator/: pyproject.toml
ext/s2gos-simulator/src/s2gos_simulator/: core.py  main.py
notebook/: client-api.ipynb
src/s2gos_example_app/: app.py
src/s2gos_example_app/processes/: __init__.py  observation_simulation.py  scene_generation.py
